# CACTUS

./: .gitignore  CLAUDE.md  Makefile  README.md  compile_cpp_code.sh  new_req.yml  pyproject.toml  requirements_cactus.txt  requirements_cactus2.txt  requirements_cactus3.txt  update_paths.py
cactus_scripts/: 1_wrapper_initialization3.py  2_wrapper_optimization.py  3_wrapper_FRG_mesh.py  bake_mesh_pickle.py  check_meshes_whole.py  check_pickles_whole.py  create_library.py  grid_initialization.py  joint_fibre_optimizer.out  libraries.txt  meta_grid.py  nfg2cactus.py  optim_loger.py  paste_mesh_datset.py  quick_mesh_cactus.py  quick_mesh_cactus2.py  quick_mesh_cactus_parallel.py  update_paths.py
cactus_scripts/libraries/: CactusMath.py  CactusPaths.py  ReadConfigurations.py  ReadWriteStrands.py  RotatingStrand.py  (+4 more)
config_files/: cactus_crossing.txt  cactus_single.txt  cactus_wrong.txt
fibre_optimization_cpp/: Grid_space.h  a.out  catch_kill.cpp  compile.sh  debug_perf.sh  f_g_2CtrlPoints.cpp  f_g_2CtrlPoints.h  f_g_3CtrlPoints.h  f_g_compression.h  f_g_direction_strand.cpp  f_g_overlap_GRID.cpp  f_g_radii.cpp  input.txt  main.cpp  optimizers.cpp  path_old.txt  read_strands_txt.cpp  strand_class.cpp  strand_class.h
source_fibre_optimization/: Global_optimizer.cpp  Global_optimizer.h  Grid_space.cpp  Makefile  colors.cpp  compile_intel.sh  debug.sh  f_g_3CtrlPoints.cpp  f_g_compression.cpp  f_g_direction_strand.h  f_g_overlap_GRID.h  f_g_radii.h  omp_config.h  optimizers.h  read_cin.cpp  read_cin.h  read_strands_txt.h  vector_funcions.cpp  vector_funcions.h
(+25 files in other folders)
